kube-deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: golang-chatbot-deployment
  labels:
    app: golang-chatbot
spec:
  selector:
    matchLabels:
      app: golang-chatbot
  replicas: 2
  template:
    metadata:
      labels:
        app: golang-chatbot
    spec:
      containers:
      - name: golang-chatbot
        image: gcr.io/optimal-tide-243614/golang-chatbot:1.0
        ports:
        - containerPort: 80
