kube-service.yml
apiVersion: v1
kind: Service
metadata:
  name: golang-chatbot-service
  labels:
    app: golang-chatbot
spec:
  type: NodePort
  ports:
  - name: golang-chatbot-service
    port: 80
    targetPort: 80
  selector:
    app: golang-chatbot
