kube-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: golang-chatbot-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - golang-chatbot.planx.com
  rules:
  - host: golang-chatbot.planx.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: golang-chatbot-service
          servicePort: 80
